Version 1.24 2006-XX-XX
=======================	
* Compilation issues with 2.4 fixed (yet again!)
* Minor tweaks and optimizations

Version 1.23 2006-08-10
=======================	
* Bug fixes to recent changes in 64-bit driver support.
* ZyDas ZD1211 driver uses interrupt-out URBs, so set them up properly.
* Bug fixes to Atheros USB driver support.

Version 1.22 2006-08-05
=======================	
* Added support for Broadcom 802.11n (draft) driver
* Added support for 64-bit Marvell driver
* Optimizations for 64-bit drivers
* If network interface name changes (through udev, ifrename etc),
  ndiswrapper notices it and changes entry in procfs
* Compilation issue with 2.4 issue fixed
	
Version 1.21 2006-07-15
=======================
* Fix to a bug (in 1.20) that locked up when used with RT2500 with SMP.
* RT2500 is supported with 64-bit.

Version 1.20 2006-07-15
=======================
* Fixes to 64-bit drivers; TI 1450 (used in AVM Fritz) is supported with 64-bit.
* Fix to SMP kernel crash when USB device is unplugged.

Version 1.19 2006-07-02
=======================
* Calls to Miniport functions with serialized drivers (such as RT2500) are
  serialized, so they should work with SMP.
* Enable interrupts in IRQ handler; otherwise, some drivers (e.g., Marvell
  8335) don't work.
* Kernel crash with changing mac address (with 'ifconfig hw ether ...') fixed.

Version 1.18 2006-06-22
=======================
* Kernel crash with RT2500 (and possibly other serialized drivers) under heavy
  traffic load fixed.
* Support for RNDIS driver with Vista drivers for 64-bit added.

Version 1.17 2006-06-04
=======================
* netpoll support added; with this netconsole can be used with ndiswrapper.
* Suspend/resume improved: Until now devices are halted (which is similar to
  removing the device) during suspend and initialized during resume. Now,
  if a driver supports suspend and resume, that is used instead. With this,