@@ -909,9 +909,9 @@ wstdcall NTSTATUS WIN_FUNC(IoGetDeviceProperty,5)
 	case DevicePropertyDeviceDescription:
 	case DevicePropertyFriendlyName:
 	case DevicePropertyDriverKeyName:
-		if (wrap_is_pci_bus(wd->bus_type))
+		if (wrap_is_pci_bus(wd->dev_bus))
 			RtlInitAnsiString(&ansi, "PCI");
-		else // if (wrap_is_usb_bus(wd->dev_bus_type))
+		else // if (wrap_is_usb_bus(wd->dev_bus))
 			RtlInitAnsiString(&ansi, "USB");
 		need = sizeof(wchar_t) * (ansi.max_length + 1);
 		if (buffer_len < need) {
